force-app/main/default/objects/Contact/fields/Barrio__c.field-meta.xml
<CustomField>
    <fullName>Barrio__c</fullName>
    <label>Barrio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>