force-app/main/default/objects/Contact/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <externalId>true</externalId>
    <label>DNI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>