force-app/main/default/objects/Contact/fields/Es_de_Community__c.field-meta.xml
<CustomField>
    <fullName>Es_de_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es de Community</label>
    <type>Checkbox</type>
</CustomField>