force-app/main/default/objects/Contact/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <formula>Codigo_Postal__r.Localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Localidad</label>
    <type>Text</type>
</CustomField>