force-app/main/default/objects/Contact/fields/Mapa__c.field-meta.xml
<CustomField>
    <fullName>Mapa__c</fullName>
    <formula>IF( AND( NOT(ISBLANK(Calle__c)), NOT(ISBLANK(Localidad__c)), NOT(ISBLANK(Provincia__c))),
HYPERLINK(&apos;https://maps.google.com/maps/place/&apos; + Calle__c + &apos;+&apos; + Provincia__c, IMAGE(&apos;http://maps.google.com/maps/api/staticmap?center=&apos; + Calle__c + &apos;, &apos; + Localidad__c+ &apos;, &apos;+ Provincia__c +&apos;&amp;zoom=16&amp;size=2000x200&amp;markers=color:red|&apos; + Calle__c + &apos;, &apos; + Localidad__c+ &apos;, &apos; + Provincia__c+ &apos;&amp;key=AIzaSyDME8WnL7m3m5XdszA2ECzcxZcElktL7yM&apos; ,&apos;Mapa no disponible&apos;)), &quot;Mapa no disponible&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapa</label>
    <type>Text</type>
</CustomField>