force-app/main/default/objects/Contact/fields/MC_sync__c.field-meta.xml
<CustomField>
    <fullName>MC_sync__c</fullName>
    <formula>OR(Account.RecordType.DeveloperName = &apos;Baby&apos;,
Account.RecordType.DeveloperName = &apos;Paciente_Regular&apos;,
Account.RecordType.DeveloperName = &apos;Paciente_Best_Care&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC sync</label>
    <type>Checkbox</type>
</CustomField>