force-app/main/default/objects/Contact/fields/N_mero__c.field-meta.xml
<CustomField>
    <fullName>N_mero__c</fullName>
    <description>Número o altura de calle</description>
    <label>Número</label>
    <length>20</length>
    <type>Text</type>
</CustomField>