force-app/main/default/objects/Contact/fields/Obra_social__c.field-meta.xml
<CustomField>
    <fullName>Obra_social__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra social</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuenta</relationshipLabel>
    <relationshipName>Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>