force-app/main/default/objects/Contact/fields/Tipo_de_direccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_direccion__c</fullName>
    <label>Tipo de dirección</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particular</fullName>
            </value>
            <value>
                <fullName>Geriátrico</fullName>
            </value>
            <value>
                <fullName>Centro de rehabilitación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>