force-app/main/default/objects/Contact/fields/Tipo_de_Telefono_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Telefono_de_Contacto__c</fullName>
    <description>Tipo de teléfono de contacto</description>
    <label>Tipo de Teléfono de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Celular</fullName>
            </value>
            <value>
                <fullName>Laboral</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>