force-app/main/default/objects/Contact/fields/VisMed_Areas_Terap_uticas__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Areas_Terap_uticas__c</fullName>
    <label>Areas Terapéuticas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Areas_Terapeuticas</valueSetName>
    </valueSet>
</CustomField>