force-app/main/default/objects/Contact/fields/VisMed_DNI__c.field-meta.xml
<CustomField>
    <fullName>VisMed_DNI__c</fullName>
    <label>DNI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>