force-app/main/default/objects/Contact/fields/VisMed_Equipo__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Equipo__c</fullName>
    <label>Equipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipo</valueSetName>
    </valueSet>
</CustomField>