force-app/main/default/objects/Contact/recordTypes/Contacto_community.recordType-meta.xml
<RecordType>
    <fullName>Contacto_community</fullName>
    <active>true</active>
    <label>Contacto community</label>
</RecordType>