force-app/main/default/objects/Contact/recordTypes/Contacto_de_Obra_Social.recordType-meta.xml
<RecordType>
    <fullName>Contacto_de_Obra_Social</fullName>
    <active>true</active>
    <label>Contacto de Obra Social</label>
</RecordType>