force-app/main/default/objects/Contact/recordTypes/Contacto_de_paciente.recordType-meta.xml
<RecordType>
    <fullName>Contacto_de_paciente</fullName>
    <active>true</active>
    <label>Contacto de paciente</label>
</RecordType>