force-app/main/default/objects/Contact/recordTypes/Contacto_de_sucursal.recordType-meta.xml
<RecordType>
    <fullName>Contacto_de_sucursal</fullName>
    <active>true</active>
    <description>Para proyecto Danone CW</description>
    <label>Contacto de sucursal</label>
</RecordType>