force-app/main/default/objects/Contact/recordTypes/Visitador_medico.recordType-meta.xml
<RecordType>
    <fullName>Visitador_medico</fullName>
    <active>true</active>
    <label>Visitador médico</label>
</RecordType>