force-app/main/default/objects/Contact/validationRules/VisMed_DNISoloNumeros.validationRule-meta.xml
<ValidationRule>
    <fullName>VisMed_DNISoloNumeros</fullName>
    <active>false</active>
    <description>Regla que valida que solo se ingresen números en el campo DNI</description>
    <errorConditionFormula>AND(
				NOT(ISNUMBER(VisMed_DNI__c)),
				 RecordType.DeveloperName &lt;&gt; &apos;Contact&apos;
				)</errorConditionFormula>
    <errorMessage>Solo puede ingresar números en el campo DNI</errorMessage>
</ValidationRule>