force-app/main/default/objects/Contact/listViews/Contactos_de_paciente.listView-meta.xml
<ListView>
    <fullName>Contactos_de_paciente</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Paciente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contacto_de_paciente</value>
    </filters>
    <label>Contactos de paciente</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
        <group>Finanzas_Service</group>
        <group>Service</group>
    </sharedTo>
</ListView>