force-app/main/default/objects/Contact/listViews/Visitadores_m_dicos.listView-meta.xml
<ListView>
    <fullName>Visitadores_m_dicos</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Visitador_Medico</value>
    </filters>
    <label>Visitadores médicos</label>
</ListView>